errlog
../Core/Src/explore.c:15:6: error: conflicting types for 'explore_init'
   15 | void explore_init(uint8_t _sampling_time_ms);
      |      ^~~~~~~~~~~~
../Core/Src/explore.c:15:1: note: an argument type that has a default promotion cannot match an empty parameter name list declaration
   15 | void explore_init(uint8_t _sampling_time_ms);
      | ^~~~
In file included from ../Core/Src/explore.c:10:
../Core/Inc/explore.h:21:6: note: previous declaration of 'explore_init' was here
   21 | void explore_init();
      |      ^~~~~~~~~~~~
../Core/Src/explore.c:16:1: error: expected identifier or '(' before '{' token
   16 | {
      | ^
../Core/Src/explore.c: In function 'explore_start':
../Core/Src/explore.c:24:5: error: 'course_state_index' undeclared (first use in this function); did you mean 'increment_course_state_index'?
   24 |     course_state_index = 0;
      |     ^~~~~~~~~~~~~~~~~~
      |     increment_course_state_index
../Core/Src/explore.c:24:5: note: each undeclared identifier is reported only once for each function it appears in
arm-none-eabi-gcc "../Core/Src/geometry.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32F405xx -DUSE_HAL_DRIVER -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/geometry.d" -MT"Core/Src/geometry.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/geometry.o"
../Core/Src/explore.c:25:5: error: 'encoder_data' undeclared (first use in this function); did you mean 'encoderdata'?
   25 |     encoder_data->left[course_state_index] = 0;
      |     ^~~~~~~~~~~~
      |     encoderdata
../Core/Src/explore.c:27:12: error: invalid type argument of '->' (have 'ImuData')
   27 |     imudata->yaw[course_state_index] = 0;
      |            ^~
../Core/Src/explore.c: In function 'explore_main':
../Core/Src/explore.c:33:5: warning: implicit declaration of function 'explore_opening'; did you mean 'explore_logging'? [-Wimplicit-function-declaration]
   33 |     explore_opening();
      |     ^~~~~~~~~~~~~~~
      |     explore_logging
../Core/Src/explore.c:36:5: warning: implicit declaration of function 'explore_ending'; did you mean 'explore_init'? [-Wimplicit-function-declaration]
   36 |     explore_ending();
      |     ^~~~~~~~~~~~~~
      |     explore_init
../Core/Src/explore.c: In function 'explore_logging':
../Core/Src/explore.c:64:10: warning: implicit declaration of function 'imu_read_yaw' [-Wimplicit-function-declaration]
   64 |     _w = imu_read_yaw() * 0.001;
      |          ^~~~~~~~~~~~
../Core/Src/explore.c:68:17: error: invalid type argument of '->' (have 'EncoderData')
   68 |     encoderdata -> left[course_state_index] += _left;
      |                 ^~
../Core/Src/explore.c:68:25: error: 'course_state_index' undeclared (first use in this function); did you mean 'increment_course_state_index'?
   68 |     encoderdata -> left[course_state_index] += _left;
      |                         ^~~~~~~~~~~~~~~~~~
      |                         increment_course_state_index
../Core/Src/explore.c:69:17: error: invalid type argument of '->' (have 'EncoderData')
   69 |     encoderdata -> right[course_state_index] += _right;
      |                 ^~
../Core/Src/explore.c:70:13: error: invalid type argument of '->' (have 'ImuData')
   70 |     imudata -> yaw[course_state_index] += _w;
      |             ^~
../Core/Src/explore.c:75:55: error: 'COURSE_SAMPLING_TIME' undeclared (first use in this function); did you mean 'SAMPLING_TIME'?
   75 |     if(logging_count * (0.001f * sampling_time_ms) >= COURSE_SAMPLING_TIME)
      |                                                       ^~~~~~~~~~~~~~~~~~~~
      |                                                       SAMPLING_TIME
../Core/Src/explore.c:77:9: warning: implicit declaration of function 'course_increment_state_index' [-Wimplicit-function-declaration]
   77 |         course_increment_state_index();
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/explore.c:78:9: error: 'encoder_data' undeclared (first use in this function); did you mean 'encoderdata'?
   78 |         encoder_data->left[course_state_index] = 0;
      |         ^~~~~~~~~~~~
      |         encoderdata
../Core/Src/explore.c:80:16: error: invalid type argument of '->' (have 'ImuData')
   80 |         imudata->yaw[course_state_index] = 0;
      |                ^~
../Core/Src/explore.c:59:26: warning: variable '_v' set but not used [-Wunused-but-set-variable]
   59 |     float _left, _right, _v, _w;
      |                          ^~
../Core/Src/explore.c: At top level:
../Core/Src/explore.c:91:6: warning: conflicting types for 'explore_opening'
   91 | void explore_opening()
      |      ^~~~~~~~~~~~~~~
../Core/Src/explore.c:33:5: note: previous implicit declaration of 'explore_opening' was here
   33 |     explore_opening();
      |     ^~~~~~~~~~~~~~~
../Core/Src/explore.c: In function 'explore_opening':
../Core/Src/explore.c:95:9: warning: implicit declaration of function 'course_reset_state_index' [-Wimplicit-function-declaration]
   95 |         course_reset_state_index();
      |         ^~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/explore.c: At top level:
../Core/Src/explore.c:99:6: warning: conflicting types for 'explore_ending'
   99 | void explore_ending()
      |      ^~~~~~~~~~~~~~
../Core/Src/explore.c:36:5: note: previous implicit declaration of 'explore_ending' was here
   36 |     explore_ending();
      |     ^~~~~~~~~~~~~~
arm-none-eabi-gcc "../Core/Src/imu.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32F405xx -DUSE_HAL_DRIVER -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/imu.d" -MT"Core/Src/imu.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/imu.o"
../Core/Src/explore.c: In function 'explore_ending':
../Core/Src/explore.c:103:9: warning: implicit declaration of function 'switch_reset_enter' [-Wimplicit-function-declaration]
  103 |         switch_reset_enter();
      |         ^~~~~~~~~~~~~~~~~~
arm-none-eabi-gcc "../Core/Src/kcm_controller.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32F405xx -DUSE_HAL_DRIVER -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/kcm_controller.d" -MT"Core/Src/kcm_controller.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/kcm_controller.o"
make: *** [Core/Src/subdir.mk:124: Core/Src/explore.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/kcm_controller.c: In function 'kcm_sample':
../Core/Src/kcm_controller.c:54:11: warning: implicit declaration of function 'kcm_read_twist_reference' [-Wimplicit-function-declaration]
   54 |     q_r = kcm_read_twist_reference();
      |           ^~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/kcm_controller.c:54:11: error: incompatible types when assigning to type 'Twist' from type 'int'
../Core/Src/kcm_controller.c: At top level:
../Core/Src/kcm_controller.c:133:7: error: conflicting types for 'kcm_read_twist_reference'
  133 | Twist kcm_read_twist_reference()
      |       ^~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/kcm_controller.c:54:11: note: previous implicit declaration of 'kcm_read_twist_reference' was here
   54 |     q_r = kcm_read_twist_reference();
      |           ^~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:124: Core/Src/kcm_controller.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

21:43:53 Build Failed. 17 errors, 10 warnings. (took 11s.625ms)


